# OmSU_2-sem

./: CMakeLists.txt  README.md
laba01/: laba01.cpp  laba01.docx
laba02/: laba02.cpp  laba02.docx
laba03/: laba03.cpp  laba03.docx
laba04/: laba04.cpp  laba04.docx
laba05/: laba05.cpp  laba05.docx
laba06/: laba06.cpp  laba06.docx
laba07/: laba07.cpp  laba07.docx
laba08.1/: laba08.1.cpp  laba08.1.docx
laba08.2/: laba08.2.cpp  laba08.2.docx
laba08.3/: laba08.3.cpp  laba08.3.docx
laba09/: laba09.cpp  laba09.docx
laba10.1/: laba10.1.cpp  laba10.1.docx
laba10.2/: laba10.2.cpp  laba10.2.docx
