cmake_minimum_required(VERSION 3.26)
project(BasicsOfProgramming)

include_directories(/usr/local/include)

set(CMAKE_CXX_STANDARD 20)

add_executable(laba01 "laba01/laba01.cpp")
add_executable(laba02 "laba02/laba02.cpp")
add_executable(laba03 "laba03/laba03.cpp")
add_executable(laba04 "laba04/laba04.cpp")
add_executable(laba05 "laba05/laba05.cpp")
add_executable(laba06 "laba06/laba06.cpp")
add_executable(laba07 "laba07/laba07.cpp")
add_executable(laba08.1 "laba08.1/laba08.1.cpp")
add_executable(laba08.2 "laba08.2/laba08.2.cpp")
add_executable(laba08.3 "laba08.3/laba08.3.cpp")
add_executable(laba09 "laba09/laba09.cpp")
add_executable(laba10.1 "laba10.1/laba10.1.cpp")
add_executable(laba10.2 "laba10.2/laba10.2.cpp")

